ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings12_ES5/input.ts.stderr
error: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings12_ES5/input.ts:3:13
  |
3 | var x = "\u{FFFFFFFF}";
  |             ^^^^^^^^

